Added about page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,4 +12,10 @@
 
   </body>
 
+  <!--
+  Are you a UC Berkeley student who wants to use your coding
+  skills to build impactful projects, analyze real data and
+  tell important stories? Send us an email: projects *at*
+  dailycal.org -->
+
 </html>
