Adding grades project

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
 
-<a class="site-title" style="font-family: Marvel;" href="{{ site.baseurl }}/">{{ site.title }}</a>
+<a class="site-title" style="font-family: Marvel;" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/assets/logo.png"></a>
 <p class="site-description">{{ site.description }}</p>
 
 </header>
