--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <div class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.post_title }}</h1>
     <p class="post-meta">
-    	<span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name"><a href="{{ page.author_link }}">{{ page.author }}</a></span></span> • <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %-d, %Y" }}</time></p>
+    	<span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span> • <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %-d, %Y" }}</time></p>
   </div>
 
   <div class="post-content" itemprop="articleBody">
