Redesign front page of overflow

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,11 @@
-<header class="site-header">
+<div class="header">
+  <h1><a href="{{ site.baseurl }}/">Overflow</a></h1>
+  <p>the data desk of The Daily Californian</p>
+  <div class="external">
+    <a href="https://facebook.com/dailycal"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+    <a href="https://twitter.com/overflow_dc"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+    <a href="https://dailycal.org"><i class="fa fa-bullseye" aria-hidden="true"></i></a>
+  </div>
+</div>
 
-<a class="site-title" style="font-family: Marvel;" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/assets/logo.png"></a>
-<p class="site-description">{{ site.description }}</p>
-
-</header>
+<hr>
