--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,12 +4,11 @@
   {% include head.html %}
 
   <body>
-  
-    <div class="wrapper">
+
+    <div class="container">
       {% include header.html %}
       {{ content }}
     </div>
-
   </body>
 
   <!--
