Change colors and make blog posts

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -164,8 +164,7 @@ pre {
  */
 
  hr {
-    background-color: $brand-color;
-    color: $brand-color;
+    background-color: $grey-color;
     border: 0 none;
     height: 1px;
  }
