--- a/_sass/_post-list.scss
+++ b/_sass/_post-list.scss
@@ -20,7 +20,7 @@
 
 		h2 {
 			margin-bottom: 4px;
-			font-size: 2em;
+			font-size: 2.5em;
 			font-color: $brand-color;
 			font-family: $sans-serif;
 			font-weight: bold;
@@ -31,6 +31,7 @@
 		}
 		.post-author {
 			font-size: 1em;
+			font-weight: bold;
 			margin-bottom: 4px;
 			color: $grey-color-dark;
 		}
@@ -73,7 +74,7 @@
 
 		h2 {
 			margin-bottom: 4px;
-			font-size: 1.5em;
+			font-size: 1.7em;
 			font-color: $brand-color;
 			font-family: $sans-serif;
 			font-weight: bold;
