Redirected About URL

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <a href="https://facebook.com/dailycal"><i class="fa fa-facebook" aria-hidden="true"></i></a>
     <a href="https://twitter.com/overflow_dc"><i class="fa fa-twitter" aria-hidden="true"></i></a>
     <a href="https://dailycal.org"><i class="fa fa-bullseye" aria-hidden="true"></i></a>
-    <a href="about/index"><i class="fa fa-question" aria-hidden="true"></i></a>
+    <a href="about/"><i class="fa fa-question" aria-hidden="true"></i></a>
   </div>
 </div>
 
